RESOLVED FIXED90459
[REGRESSION] Crash when copying a StyleRuleMedia with a NULL m_mediaQueries
https://bugs.webkit.org/show_bug.cgi?id=90459
Summary [REGRESSION] Crash when copying a StyleRuleMedia with a NULL m_mediaQueries
Alexander Pavlov (apavlov)
Reported 2012-07-03 07:16:14 PDT
Caused by http://trac.webkit.org/changeset/121551. Patch to follow.
Attachments
Patch (4.93 KB, patch)
2012-07-03 07:35 PDT, Alexander Pavlov (apavlov)
kling: review+
Alexander Pavlov (apavlov)
Comment 1 2012-07-03 07:35:07 PDT
Andreas Kling
Comment 2 2012-07-03 07:41:28 PDT
Comment on attachment 150606 [details] Patch Looks legit. r=me
Alexander Pavlov (apavlov)
Comment 3 2012-07-03 07:44:36 PDT
Note You need to log in before you can comment on or make changes to this bug.